<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm">

        <TextView
            style="@style/item"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            style="@style/item" />

        <TextView
            style="@style/item"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            style="@style/item"
            android:inputType="number" />

        <TextView
            style="@style/item"
            android:text="@string/secret" />

        <EditText
            android:id="@+id/secret"
            style="@style/item"
            android:password="true" />

        <TextView
            style="@style/item"
            android:text="@string/proxyhost" />

        <EditText
            android:id="@+id/proxyhost"
            style="@style/item" />

        <TextView
            style="@style/item"
            android:text="@string/proxyport" />

        <EditText
            android:id="@+id/proxyport"
            style="@style/item"
            android:inputType="number" />

        <TextView
            style="@style/item"
            android:text="@string/packages" />

        <RadioGroup
            style="@style/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/allowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allowed" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disallowed" />
        </RadioGroup>

        <EditText
            android:id="@+id/packages"
            style="@style/item" />

        <Button
            android:id="@+id/connect"
            style="@style/item"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnect"
            style="@style/item"
            android:text="@string/disconnect" />
    </LinearLayout>
</ScrollView>